--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,14 +16,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        xcode: ["15.4", "15.2", "14.3.1"]
+        xcode: ["16.2", "16.1", "16.0", "15.4"]
         include:
+          - xcode: "16.2"
+            macos: macos-15
+          - xcode: "16.1"
+            macos: macos-15
+          - xcode: "16.0"
+            macos: macos-15
           - xcode: "15.4"
-            macos: macOS-14
-          - xcode: "15.2"
-            macos: macOS-14
-          - xcode: "14.3.1"
-            macos: macOS-14
+            macos: macos-14
     runs-on: ${{ matrix.macos }}
     name: macOS
     steps:
@@ -56,17 +58,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift: ["5.10", "5.9", "5.8"]
+        swift: ["6.0", "5.10", "5.9", "5.8"]
         include:
+          - swift: "6.0"
+            container: "swift:6.0"
           - swift: "5.10"
             container: "swift:5.10"
-            cache-version: 1
           - swift: "5.9"
             container: "swift:5.9"
-            cache-version: 1
           - swift: "5.8"
             container: "swift:5.8"
-            cache-version: 1
     runs-on: ubuntu-20.04
     container: ${{ matrix.container }}
     name: Linux
