--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,6 @@ jobs:
             macos: macos-15
           - xcode: "16.0"
             macos: macos-15
-          - xcode: "15.4"
-            macos: macos-14
     runs-on: ${{ matrix.macos }}
     name: macOS
     steps:
@@ -58,16 +56,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift: ["6.0", "5.10", "5.9", "5.8"]
+        swift: ["6.0"]
         include:
           - swift: "6.0"
             container: "swift:6.0"
-          - swift: "5.10"
-            container: "swift:5.10"
-          - swift: "5.9"
-            container: "swift:5.9"
-          - swift: "5.8"
-            container: "swift:5.8"
     runs-on: ubuntu-20.04
     container: ${{ matrix.container }}
     name: Linux
