feat: semantic release pipeline (#2)
* Configure semantic-release workflow

Note: Crates.io publishing functionality needs verification in production environment.

--- a/.releaserc
+++ b/.releaserc
@@ -39,6 +39,14 @@
                 }
             }
         ],
-        "@semantic-release/github"
+        [
+            "@semantic-release-cargo/semantic-release-cargo",
+            {
+                "verifyConditionsCmd": "verify-conditions",
+                "prepareCmd": "prepare ${nextRelease.version}",
+                "publishCmd": "publish"
+            }
+        ],
+        ["@semantic-release/github"]
     ]
 }
